# podcast_playlist_creator

./: .gitignore  LICENSE  README.md
extension/: background_script.js  content.js  index.html  manifest.json  podcast_window.html  popup_script.js  service_worker.js  style.css
python_client/: pyproject.toml  split_podcasts.sh  upload_podcasts.sh
python_client/src/python_client/: audio_processing.py  feed_xml_processing.py  firebase_hosting.py  preprocessing.py  rss_feed.py  split_podcasts.py  text_to_speech.py  upload_podcasts.py
python_client/tests/: conftest.py  helpers.py  test_audio_processing.py  test_firebase_hosting.py  test_preprocessing.py  test_rss_feed.py  test_split_podcasts.py  test_text_to_speech.py  test_upload_podcasts.py
python_client/tests/resources/: feed.sample.xml  rss.xml  sample.m4a
rss_hosting/: .firebaserc  convert_m4a_to_mp3.sh  deploy_podcasts.sh  fill_podcast_duration.sh  set_id3_tags.sh
split_podcasts/: audio_operations.py  main.py  podcast.py  text_to_speech.py
