[project]
name = "python-client"
version = "0.1.0"
description = ""
authors = [{ name = "Noan Cloarec" }]
requires-python = ">=3.12,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "eyed3 (>=0.9.8,<0.10.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "py-picotts (>=0.1.2,<0.2.0)",
]

[project.scripts]
prepare_podcast_upload = "python_client.upload_podcasts:prepare_podcast_upload"
split_podcasts = "python_client.split_podcasts:split_podcasts"

[dependency-groups]
dev = [
    "pytest>=8.4.2,<9",
    "black>=25.9.0,<26",
    "ruff>=0.14.1,<0.15",
    "mypy>=1.18.2,<2",
    "pytest-mock>=3.15.1,<4",
]

[build-system]
requires = ["uv_build>=0.8.7,<0.12.0"]
build-backend = "uv_build"


[tool.pytest.ini_options]
pythonpath = [
    "."
]
